[gd_scene load_steps=2 format=3 uid="uid://tutorial_panel"]

[ext_resource type="Script" path="res://scripts/ui/tutorial_panel.gd" id="1_script"]

[node name="TutorialPanel" type="PanelContainer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -180.0
offset_right = 250.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(1, 0.9, 0.5, 1)
text = "TUTORIAL"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 16
text = "Witaj w Prison Tycoon!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Kontynuuj"
